--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,4 +1,4 @@
---- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/zGodSky/OneLine
+--- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/zTestGuy/OneLine
 branches:
 - master
 projects:
